testdata/baselines/reference/submodule/conformance/checkJsxChildrenProperty1.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
file.tsx(6,24): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (2 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Prop {
        a: number,
        b: string,
        children: string | JSX.Element
                           ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    }
    
    function Comp(p: Prop) {
        return <div>{p.b}</div>;
    }
    
    // OK
    let k = <Comp a={10} b="hi" children ="lol" />;
    let k1 =
        <Comp a={10} b="hi">
            hi hi hi!
        </Comp>;
    let k2 =
        <Comp a={10} b="hi">
            <div>hi hi hi!</div>
        </Comp>;